SPRING FRAMEWORK CHANGELOG
==========================
$Id$

Changes in version 1.0 M3 (XX.11.2003)
--------------------------------------
* refactored JDBC core package so that SQLErrorCodeExceptionTranslator can be subclassed by users and passed into JdbcTemplate
* refactored JDBC object package so that JdbcTemplate is now in root RdbmsOperation class, and one JdbcTemplate can be used to configure multiple RdbmsOperations
* added "default-dependency-check" and "default-autowire" attributes to root tag in XML bean definitions
* redefined autowiring to ignore if no matching bean found but still complain in case of more than one matching bean
* ignore specified dependency types on autowiring, like BeanFactory and ApplicationContext
* introduced "getBeansOfType" method in ListableBeanFactory, retrieving both normal beans and FactoryBean-created beans
* introduced "getObjectType" method in FactoryBean, to avoid unnecessary bean creation on autowire checks
* introduced FactoryBeanCircularReferenceException and refined circular reference handling with a FactoryBean involved
* added "targetClass" argument to StaticMethodPointcut.applies()
* added support for placeholders in bean reference names to PropertyPlaceholderConfigurer
* added support for cross-referencing placeholders in placeholder values to PropertyPlaceholderConfigurer
* reworked commit exception handling in HibernateTransactionManager, triggering rollback if not TransactionException
* reworked commit exception handling in JdoTransactionManager, triggering rollback if not JDOFatalException
* fixed potential NPE in debug log statement of VelocityView

Changes in version 1.0 M2 (23.10.2003)
--------------------------------------
* added optional dependency checking for bean factories, ensuring that all bean properties have been set before use
* added non-default "autowire" functionality so that bean factories can optionally configure dependencies automatically